made energy to worm inactive and crosshair

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scene/worm.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/")
+dock_filesystem_selected_paths=PackedStringArray("res://Grafika/aim.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/", "res://Grafika/", "res://Global/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Scene/worm.gd"]
+open_scripts=["res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Global/Global.gd", "res://Scene/main.gd", "res://Scene/worm.gd"]
 selected_script="res://Scene/worm.gd"
-open_help=["Geometry2D", "Object", "RigidBody2D"]
+open_help=["Geometry2D", "Input", "Object", "PhysicsBody2D", "RigidBody2D"]
 script_split_offset=70
 list_split_offset=0
 
