--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,25 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"State",
+"class": &"Active",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scene/Active.gd"
+}, {
+"base": &"State",
+"class": &"Innactive",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scene/Innactive.gd"
+}, {
+"base": &"Node",
+"class": &"State",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scene/State.gd"
+}, {
+"base": &"CharacterBody2D",
+"class": &"Worm",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Scene/worm.gd"
+}])
