--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Global/Global.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/", "res://Grafika/", "res://Grafika/progress bar/", "res://Global/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,8 +27,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/bitmaptest.tscn", "res://Scene/worm.tscn", "res://Scene/bazooka.tscn", "res://Scene/granade.tscn", "res://Scene/sniper.tscn")
-current_scene="res://Scene/worm.tscn"
+open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/bitmaptest.tscn", "res://Scene/worm.tscn", "res://Scene/bazooka.tscn", "res://Scene/granade.tscn", "res://Scene/sniper.tscn", "res://Scene/ui.tscn")
+current_scene="res://Scene/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/worm.gd"]
-selected_script="res://Scene/worm.gd"
+open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/ui.gd", "res://Scene/worm.gd"]
+selected_script="res://Scene/main.gd"
 open_help=["Area2D", "Camera2D", "Geometry2D", "Input", "Label", "Object", "PhysicsBody2D", "RayCast2D", "RID", "RigidBody2D", "SkeletonProfile"]
 script_split_offset=150
 list_split_offset=0
