--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -31,14 +31,14 @@ open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/bitmaptest.t
 current_scene="res://Scene/main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/ui.gd", "res://Scene/worm.gd"]
 selected_script="res://Scene/main.gd"
-open_help=["Area2D", "Camera2D", "Geometry2D", "Input", "Label", "Object", "PhysicsBody2D", "RayCast2D", "RID", "RigidBody2D", "SkeletonProfile"]
+open_help=["Area2D", "Array", "Camera2D", "Color", "Geometry2D", "Input", "Label", "Node", "NodePath", "Object", "PhysicsBody2D", "Polygon2D", "RayCast2D", "RID", "RigidBody2D", "SkeletonProfile", "String", "Tween"]
 script_split_offset=150
 list_split_offset=0
 
