--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,7 +6,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 24,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 46,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 51,
-"scroll_position": 14.0,
-"selection": false,
+"row": 43,
+"scroll_position": 15.0,
+"selection": true,
+"selection_from_column": 46,
+"selection_from_line": 43,
+"selection_to_column": 42,
+"selection_to_line": 44,
 "syntax_highlighter": "GDScript"
 }
 
@@ -59,10 +63,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 18,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 31,
+"row": 83,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -90,7 +94,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -115,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 57,
-"scroll_position": 0.0,
+"row": 59,
+"scroll_position": 31.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,12 +133,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
+"row": 4,
 "scroll_position": 4.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 4,
+"selection_from_line": 4,
+"selection_to_column": 17,
+"selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
 
@@ -146,7 +154,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
+"row": 19,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
