--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 46,
+"column": 15,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 43,
-"scroll_position": 8.0,
-"selection": true,
-"selection_from_column": 46,
-"selection_from_line": 43,
-"selection_to_column": 42,
-"selection_to_line": 44,
+"row": 34,
+"scroll_position": 16.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 12,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 101,
-"scroll_position": 71.0,
+"row": 142,
+"scroll_position": 122.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,10 +115,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 59,
+"row": 61,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
