--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,22 +13,22 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=281
-dock_hsplit_3=-270
+dock_hsplit_3=-288
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Global/Global.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/", "res://Grafika/", "res://Grafika/progress bar/", "res://Global/")
+dock_filesystem_selected_paths=PackedStringArray("res://Grafika/weapons/nade.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/", "res://Grafika/", "res://Grafika/weapons/", "res://Global/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/bitmaptest.tscn", "res://Scene/worm.tscn", "res://Scene/bazooka.tscn", "res://Scene/granade.tscn", "res://Scene/sniper.tscn", "res://Scene/ui.tscn")
-current_scene="res://Scene/main.tscn"
+open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/bitmaptest.tscn", "res://Scene/worm.tscn", "res://Scene/bazooka.tscn", "res://Scene/granade.tscn", "res://Scene/sniper.tscn", "res://Scene/ui.tscn", "res://Scene/grave.tscn")
+current_scene="res://Scene/worm.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/ui.gd", "res://Scene/worm.gd"]
-selected_script="res://Scene/main.gd"
-open_help=["Area2D", "Array", "Camera2D", "Color", "Geometry2D", "Input", "Label", "Node", "NodePath", "Object", "PhysicsBody2D", "Polygon2D", "RayCast2D", "RID", "RigidBody2D", "SkeletonProfile", "String", "Tween"]
+open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/grave.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/ui.gd", "res://Scene/worm.gd"]
+selected_script="res://Scene/Active.gd"
+open_help=["Array", "CanvasItem", "CanvasLayer", "CharacterBody2D", "Node", "Object", "PhysicsBody2D", "SceneTree", "Tween"]
 script_split_offset=150
 list_split_offset=0
 
