--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/grave.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/ui.gd", "res://Scene/worm.gd"]
-selected_script="res://Scene/Active.gd"
+selected_script="res://Scene/worm.gd"
 open_help=["Array", "CanvasItem", "CanvasLayer", "CharacterBody2D", "Node", "Object", "PhysicsBody2D", "SceneTree", "Tween"]
 script_split_offset=150
 list_split_offset=0
