--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Grafika/weapons/nade.png")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scene/", "res://Grafika/", "res://Grafika/weapons/", "res://Global/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/bitmaptest.tscn", "res://Scene/worm.tscn", "res://Scene/bazooka.tscn", "res://Scene/granade.tscn", "res://Scene/sniper.tscn", "res://Scene/ui.tscn", "res://Scene/grave.tscn")
-current_scene="res://Scene/worm.tscn"
+current_scene="res://Scene/ui.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Bullet.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/grave.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/ui.gd", "res://Scene/worm.gd"]
-selected_script="res://Scene/worm.gd"
-open_help=["Array", "CanvasItem", "CanvasLayer", "CharacterBody2D", "Node", "Object", "PhysicsBody2D", "SceneTree", "Tween"]
+open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/grave.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Node2D.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/ui.gd", "res://Scene/worm.gd"]
+selected_script="res://Scene/ui.gd"
+open_help=["Array", "CanvasItem", "CanvasLayer", "CharacterBody2D", "CollisionObject2D", "Control", "Node", "Node2D", "Object", "PhysicsBody2D", "SceneTree", "Tween"]
 script_split_offset=150
 list_split_offset=0
 
