--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scene/main.tscn", "res://Scene/bitmaptest.tscn", "res://Scene/worm.tscn", "res://Scene/bazooka.tscn", "res://Scene/granade.tscn", "res://Scene/sniper.tscn", "res://Scene/ui.tscn", "res://Scene/grave.tscn")
-current_scene="res://Scene/ui.tscn"
+current_scene="res://Scene/worm.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scene/Active.gd", "res://Scene/bazooka.gd", "res://Scene/bitmaptest.gd", "res://Global/Global.gd", "res://Scene/granade.gd", "res://Scene/grave.gd", "res://Scene/Innactive.gd", "res://Scene/main.gd", "res://Node2D.gd", "res://Scene/State.gd", "res://Scene/StateMachine.gd", "res://Scene/ui.gd", "res://Scene/worm.gd"]
-selected_script="res://Scene/ui.gd"
-open_help=["Array", "CanvasItem", "CanvasLayer", "CharacterBody2D", "CollisionObject2D", "Control", "Node", "Node2D", "Object", "PhysicsBody2D", "SceneTree", "Tween"]
+selected_script="res://Scene/Active.gd"
+open_help=["Array", "CanvasItem", "CanvasLayer", "CharacterBody2D", "CollisionObject2D", "Control", "Input", "Node", "Node2D", "Object", "PhysicsBody2D", "SceneTree", "Timer", "Tween"]
 script_split_offset=150
 list_split_offset=0
 
