--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -7,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 27,
-"scroll_position": 0.0,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 66,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 62,
-"scroll_position": 0.0,
+"row": 23,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -48,13 +48,13 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 153,
-"scroll_position": 87.0,
+"row": 156,
+"scroll_position": 147.0,
 "selection": true,
 "selection_from_column": 2,
-"selection_from_line": 153,
-"selection_to_column": 8,
-"selection_to_line": 153,
+"selection_from_line": 156,
+"selection_to_column": 42,
+"selection_to_line": 156,
 "syntax_highlighter": "GDScript"
 }
 
@@ -105,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 43,
+"column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 53,
-"scroll_position": 29.0,
+"row": 60,
+"scroll_position": 51.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -150,8 +150,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 0.0,
+"row": 16,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -161,12 +161,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 50,
+"column": 11,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
-"scroll_position": 0.0,
-"selection": false,
+"row": 74,
+"scroll_position": 65.0,
+"selection": true,
+"selection_from_column": 10,
+"selection_from_line": 74,
+"selection_to_column": 11,
+"selection_to_line": 74,
 "syntax_highlighter": "GDScript"
 }
 
